--- a/reviewJs.html
+++ b/reviewJs.html
@@ -7,7 +7,11 @@
     <title>Variable and Scope</title>
 </head>
 <body>
-    <!-- 
+      <!-- 
+        scope: scope của một biến là nơi mà biến có thể được truy cập.
+        có 2 loại 2 scope là: function scope và block scope
+        function scope: là biến được khai báo bên trong 1 hàm và chỉ có thể truy cập được trong hàm đó
+        block scope: là 1 đoạn code nằm bên trong dấu ngoặc {} và chỉ được sử dụng bên trong phạm vi của chúng.
         Khai báo biến trong Javascript:
         Có ba 3 cách khai báo biến: dùng từ khóa let,var,const và tùy vào cách khai báo cho 
         phù hợp 
@@ -15,6 +19,7 @@
         const: đây là 1 hằng số, vì vậy khi khai báo biến const thì chúng ta phải gắn giá trị 
         cho nó luôn,biến này thì không thay đổi được giá trị.< nếu mà cố tình thay đổi giá 
         trị của biến sẽ bị lỗi>
+        var: biến này có phạm vi function có nghĩa là biến này chỉ được sử dụng trong hàm mà chúng được khai báo
 
         + block scope : đây là 1 khối,nghĩa là chỉ hoạt động trong phạm vi được khai báo bởi cặp nhọn {}
      -->
@@ -87,7 +92,8 @@
     <script>
         // USING Fetch API
          // Method get
-        function getRequest(url){
+         /*
+                 function getRequest(url){
             return fetch(url,{
                 method: "GET",
                 headers: new Headers({
@@ -98,6 +104,7 @@
         }
         const url = 'https://corona.lmao.ninja/v2/countries/vn';
         getRequest(url).then(data=>console.log(data))
+         */
       // method post
       /*function postRequest(url,data){
         return fetch(url,{
@@ -108,6 +115,7 @@
             })
         }).then(response=>response.json());
       }*/
+
     </script>
 </body>
 </html>
