--- a/reviewJs.html
+++ b/reviewJs.html
@@ -7,7 +7,7 @@
     <title>Variable and Scope</title>
 </head>
 <body>
-      <!-- 
+    <!-- 
         scope: scope của một biến là nơi mà biến có thể được truy cập.
         có 2 loại 2 scope là: function scope và block scope
         function scope: là biến được khai báo bên trong 1 hàm và chỉ có thể truy cập được trong hàm đó
@@ -43,7 +43,17 @@
         Toán tử so sánh trong javascript: == đây là so sánh bằng nhau,=== so sánh bằng nhau và cả kiểu giữ liệu
         -->
         <!-- 
+            Loops:  
+            for: vòng lặp for cũng dùng để lặp từng phần tử trong mảng, nhưng vòng lặp for phải biết trươc tổng số lần lặp.
+            foreach: Phương thức foreach cho phép thực thi một hàm bằng cách lặp qua từng phần tử của mảng và
+            không trả về bất cứ thứ gì.
+            for in: 
+         -->
+        <!-- 
             Class and Objects: 
+            Class trong javascript dùng để tạo ra các đối tượng
+            Objects: được dùng để thể hiện cho các đối tượng mà qua đó ta có thêm các thuộc tính và phương thức
+            cho đối tượng đó.
          -->
          <!-- 
             1.2 Document Objects Model 
